--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "^7.2",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/geocoder": "^3.14",
         "spatie/laravel-backup": "^8.1",
