--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4 | ^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
         "google/apiclient": "^2.15",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
